--- a/org.eclipse.cdt.cross.arc.gnu.uclibc/plugin.xml
+++ b/org.eclipse.cdt.cross.arc.gnu.uclibc/plugin.xml
@@ -6266,6 +6266,285 @@
                superClass="org.eclipse.cdt.cross.arc.gnu.uclibc.base.option.target.mpy">
          </option>
       </toolChain>
+      <projectType
+            buildArtefactType="org.eclipse.cdt.cross.arc.gnu.uclibc.buildArtefactType.staticLib"
+            id="org.eclipse.cdt.cross.arc.gnu.hs.uclibc.linux.lib"
+            isAbstract="true">
+         <configuration
+               artifactExtension="a"
+               buildProperties="org.eclipse.cdt.build.core.buildType=org.eclipse.cdt.build.core.buildType.debug"
+               id="org.eclipse.cdt.cross.arc.gnu.hs.uclibc.linux.lib.debug"
+               name="Debug"
+               parent="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.configuration.base.hs">
+            <toolChain
+                  id="org.eclipse.cdt.cross.arc.gnu.hs.uclibc.linux.lib.toolchain.debug"
+                  isAbstract="false"
+                  superClass="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.toolchain.base.hs"
+                  targetTool="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.lib.archiver.debug">
+               <targetPlatform
+                     id="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.lib.platform.debug"
+                     isAbstract="false"
+                     superClass="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.platform.base">
+               </targetPlatform>
+               <builder
+                     id="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.lib.builder.debug"
+                     isAbstract="false"
+                     isVariableCaseSensitive="false"
+                     superClass="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.builder.base">
+               </builder>
+               <tool
+                     id="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.lib.assembler.debug"
+                     isAbstract="false"
+                     superClass="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.assembler.base">
+               </tool>
+               <tool
+                     id="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.lib.c.compiler.debug"
+                     isAbstract="false"
+                     superClass="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.c.compiler.base">
+               </tool>
+               <tool
+                     id="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.lib.cpp.compiler.debug"
+                     isAbstract="false"
+                     superClass="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.cpp.compiler.base">
+               </tool>
+               <tool
+                     id="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.lib.archiver.debug"
+                     isAbstract="false"
+                     superClass="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.archiver.base">
+               </tool>
+            </toolChain>
+         </configuration>
+         <configuration
+               artifactExtension="a"
+               buildProperties="org.eclipse.cdt.build.core.buildType=org.eclipse.cdt.build.core.buildType.release"
+               id="org.eclipse.cdt.cross.arc.gnu.hs.uclibc.linux.lib.release"
+               name="Release"
+               parent="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.configuration.base.hs">
+            <toolChain
+                  id="org.eclipse.cdt.cross.arc.gnu.hs.uclibc.linux.lib.toolchain.release"
+                  isAbstract="false"
+                  superClass="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.toolchain.base.hs"
+                  targetTool="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.lib.archiver.release">
+               <targetPlatform
+                     id="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.lib.platform.release"
+                     isAbstract="false"
+                     superClass="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.platform.base">
+               </targetPlatform>
+               <builder
+                     id="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.lib.builder.release"
+                     isAbstract="false"
+                     isVariableCaseSensitive="false"
+                     superClass="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.builder.base">
+               </builder>
+               <tool
+                     id="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.lib.assembler.release"
+                     isAbstract="false"
+                     superClass="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.assembler.base">
+               </tool>
+               <tool
+                     id="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.lib.c.compiler.release"
+                     isAbstract="false"
+                     superClass="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.c.compiler.base">
+               </tool>
+               <tool
+                     id="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.lib.cpp.compiler.release"
+                     isAbstract="false"
+                     superClass="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.cpp.compiler.base">
+               </tool>
+               <tool
+                     id="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.lib.archiver.release"
+                     isAbstract="false"
+                     superClass="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.archiver.base">
+               </tool>
+            </toolChain>
+         </configuration>
+      </projectType>
+      <projectType
+            buildArtefactType="org.eclipse.cdt.cross.arc.gnu.uclibc.buildArtefactType.staticLib"
+            id="org.eclipse.cdt.cross.arc.gnu.uclibc.eb.linux.lib"
+            isAbstract="true">
+         <configuration
+               artifactExtension="a"
+               buildProperties="org.eclipse.cdt.build.core.buildType=org.eclipse.cdt.build.core.buildType.debug"
+               id="org.eclipse.cdt.cross.arc.gnu.uclibc.eb.linux.lib.debug"
+               name="Debug"
+               parent="org.eclipse.cdt.cross.arc.gnu.uclibc.eb.linux.configuration.base">
+            <toolChain
+                  id="org.eclipse.cdt.cross.arc.gnu.uclibc.eb.linux.lib.toolchain.debug"
+                  isAbstract="false"
+                  superClass="org.eclipse.cdt.cross.arc.gnu.uclibc.eb.linux.toolchain.base"
+                  targetTool="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.lib.archiver.debug">
+               <targetPlatform
+                     id="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.lib.platform.debug"
+                     isAbstract="false"
+                     superClass="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.platform.base">
+               </targetPlatform>
+               <builder
+                     id="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.lib.builder.debug"
+                     isAbstract="false"
+                     isVariableCaseSensitive="false"
+                     superClass="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.builder.base">
+               </builder>
+               <tool
+                     id="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.lib.assembler.debug"
+                     isAbstract="false"
+                     superClass="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.assembler.base">
+               </tool>
+               <tool
+                     id="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.lib.c.compiler.debug"
+                     isAbstract="false"
+                     superClass="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.c.compiler.base">
+               </tool>
+               <tool
+                     id="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.lib.cpp.compiler.debug"
+                     isAbstract="false"
+                     superClass="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.cpp.compiler.base">
+               </tool>
+               <tool
+                     id="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.lib.archiver.debug"
+                     isAbstract="false"
+                     superClass="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.archiver.base">
+               </tool>
+            </toolChain>
+         </configuration>
+         <configuration
+               artifactExtension="a"
+               buildProperties="org.eclipse.cdt.build.core.buildType=org.eclipse.cdt.build.core.buildType.release"
+               id="org.eclipse.cdt.cross.arc.gnu.uclibc.eb.linux.lib.release"
+               name="Release"
+               parent="org.eclipse.cdt.cross.arc.gnu.uclibc.eb.linux.configuration.base">
+            <toolChain
+                  id="org.eclipse.cdt.cross.arc.gnu.uclibc.eb.linux.lib.toolchain.release"
+                  isAbstract="false"
+                  superClass="org.eclipse.cdt.cross.arc.gnu.uclibc.eb.linux.toolchain.base"
+                  targetTool="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.lib.archiver.release">
+               <targetPlatform
+                     id="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.lib.platform.release"
+                     isAbstract="false"
+                     superClass="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.platform.base">
+               </targetPlatform>
+               <builder
+                     id="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.lib.builder.release"
+                     isAbstract="false"
+                     isVariableCaseSensitive="false"
+                     superClass="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.builder.base">
+               </builder>
+               <tool
+                     id="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.lib.assembler.release"
+                     isAbstract="false"
+                     superClass="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.assembler.base">
+               </tool>
+               <tool
+                     id="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.lib.c.compiler.release"
+                     isAbstract="false"
+                     superClass="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.c.compiler.base">
+               </tool>
+               <tool
+                     id="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.lib.cpp.compiler.release"
+                     isAbstract="false"
+                     superClass="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.cpp.compiler.base">
+               </tool>
+               <tool
+                     id="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.lib.archiver.release"
+                     isAbstract="false"
+                     superClass="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.archiver.base">
+               </tool>
+            </toolChain>
+         </configuration>
+      </projectType>
+      <projectType
+            buildArtefactType="org.eclipse.cdt.cross.arc.gnu.uclibc.buildArtefactType.staticLib"
+            id="org.eclipse.cdt.cross.arc.gnu.hs.uclibc.eb.linux.lib"
+            isAbstract="true">
+         <configuration
+               artifactExtension="a"
+               buildProperties="org.eclipse.cdt.build.core.buildType=org.eclipse.cdt.build.core.buildType.debug"
+               id="org.eclipse.cdt.cross.arc.gnu.hs.uclibc.eb.linux.lib.debug"
+               name="Debug"
+               parent="org.eclipse.cdt.cross.arc.gnu.uclibc.eb.linux.configuration.base.hs">
+            <toolChain
+                  id="org.eclipse.cdt.cross.arc.gnu.hs.uclibc.eb.linux.lib.toolchain.debug"
+                  isAbstract="false"
+                  superClass="org.eclipse.cdt.cross.arc.gnu.uclibc.eb.linux.toolchain.base.hs"
+                  targetTool="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.lib.archiver.debug">
+               <targetPlatform
+                     id="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.lib.platform.debug"
+                     isAbstract="false"
+                     superClass="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.platform.base">
+               </targetPlatform>
+               <builder
+                     id="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.lib.builder.debug"
+                     isAbstract="false"
+                     isVariableCaseSensitive="false"
+                     superClass="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.builder.base">
+               </builder>
+               <tool
+                     id="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.lib.assembler.debug"
+                     isAbstract="false"
+                     superClass="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.assembler.base">
+               </tool>
+               <tool
+                     id="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.lib.c.compiler.debug"
+                     isAbstract="false"
+                     superClass="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.c.compiler.base">
+               </tool>
+               <tool
+                     id="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.lib.cpp.compiler.debug"
+                     isAbstract="false"
+                     superClass="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.cpp.compiler.base">
+               </tool>
+               <tool
+                     id="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.lib.archiver.debug"
+                     isAbstract="false"
+                     superClass="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.archiver.base">
+               </tool>
+            </toolChain>
+         </configuration>
+         <configuration
+               artifactExtension="a"
+               buildProperties="org.eclipse.cdt.build.core.buildType=org.eclipse.cdt.build.core.buildType.release"
+               id="org.eclipse.cdt.cross.arc.gnu.hs.uclibc.eb.linux.lib.release"
+               name="Release"
+               parent="org.eclipse.cdt.cross.arc.gnu.uclibc.eb.linux.configuration.base.hs">
+            <toolChain
+                  id="org.eclipse.cdt.cross.arc.gnu.hs.uclibc.eb.linux.lib.toolchain.release"
+                  isAbstract="false"
+                  superClass="org.eclipse.cdt.cross.arc.gnu.uclibc.eb.linux.toolchain.base.hs"
+                  targetTool="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.lib.archiver.release">
+               <targetPlatform
+                     id="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.lib.platform.release"
+                     isAbstract="false"
+                     superClass="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.platform.base">
+               </targetPlatform>
+               <builder
+                     id="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.lib.builder.release"
+                     isAbstract="false"
+                     isVariableCaseSensitive="false"
+                     superClass="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.builder.base">
+               </builder>
+               <tool
+                     id="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.lib.assembler.release"
+                     isAbstract="false"
+                     superClass="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.assembler.base">
+               </tool>
+               <tool
+                     id="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.lib.c.compiler.release"
+                     isAbstract="false"
+                     superClass="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.c.compiler.base">
+               </tool>
+               <tool
+                     id="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.lib.cpp.compiler.release"
+                     isAbstract="false"
+                     superClass="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.cpp.compiler.base">
+               </tool>
+               <tool
+                     id="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.lib.archiver.release"
+                     isAbstract="false"
+                     superClass="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.archiver.base">
+               </tool>
+            </toolChain>
+         </configuration>
+      </projectType>
       
       
       <!-- -->
@@ -6286,30 +6565,6 @@
             filterPattern=".*g\+\+"
             id="org.eclipse.cdt.cross.arc.gnu.templates.ARC_HelloWorld_CPP_Project"
             location="$nl$/templates/projecttemplates/HelloWorld_CPP_Project/template.xml"
-            projectType="org.eclipse.cdt.cross.arc.gnu.uclibc.buildArtefactType.application">
-      </template>
-      <template
-            filterPattern=".*gcc"
-            id="org.eclipse.cdt.cross.arc.gnu.templates.ARC_HS34_Empty_C_Project"
-            location="$nl$/templates/projecttemplates/HS34_Empty_Project/template.xml"
-            projectType="org.eclipse.cdt.cross.arc.gnu.uclibc.buildArtefactType.application">
-      </template>
-      <template
-            filterPattern=".*gcc"
-            id="org.eclipse.cdt.cross.arc.gnu.templates.ARC_HS36_Empty_C_Project"
-            location="$nl$/templates/projecttemplates/HS36_Empty_Project/template.xml"
-            projectType="org.eclipse.cdt.cross.arc.gnu.uclibc.buildArtefactType.application">
-      </template>
-      <template
-            filterPattern=".*g\+\+"
-            id="org.eclipse.cdt.cross.arc.gnu.templates.ARC_HS34_Empty_CPP_Project"
-            location="$nl$/templates/projecttemplates/HS34_Empty_CPP_Project/template.xml"
-            projectType="org.eclipse.cdt.cross.arc.gnu.uclibc.buildArtefactType.application">
-      </template>
-      <template
-            filterPattern=".*g\+\+"
-            id="org.eclipse.cdt.cross.arc.gnu.templates.ARC_HS36_Empty_CPP_Project"
-            location="$nl$/templates/projecttemplates/HS36_Empty_CPP_Project/template.xml"
             projectType="org.eclipse.cdt.cross.arc.gnu.uclibc.buildArtefactType.application">
       </template>
    </extension>
